app/assets/stylesheets/bootstrap-custom.css.scss
/* ... */
.footer {
  background: #4780b4 !important;
  border-color: #83d4eb;
  border-width: 1px 0 0 0;
  bottom: 0;
  position: absolute;
  height: 100px;
  width: 100%;
  padding-top: 1.5em;
  padding-bottom: 0.5em;
  .container {
    text-align: center;
  }
  a, .footer-menu-divider, p {
    font-size: 0.9em;
    font-weight: 300;
    color: #fff;
    letter-spacing: 2px;
  }
  p {
    font-size: 0.75em;
    font-weight: 200;
  }
}
// CSS for Brewwery/Beer update page
#brewery_all_val {
  height: 30px;
  width: 400px;
}
.brewery-name-with-id {
  display: inline-block;
}
.brewery-name-header {
  font-size: 24px;
}
.no-overflow {
  overflow: hidden; 
  text-overflow: ellipsis; 
  white-space: nowrap;
}
.inputButton {
    width: 100px;
}
.inputButton2 {
    width: 200px;
}
.editButton {
  width: 100%;
  font-size: 12px;
  padding: 6px 8px;
}
.need-text {
  color: red;
}
.small-padding {
  div {
    padding: 0 5px;
  }
}

#new_beer, #new_brewery, #edit_brewery, #edit_beer, #new_alt_brewery_name {
  input {
    margin-bottom: 7.5px;
  }
  h6 {
    margin: 5px 0 5px 5px;
  }
}
.formButton {
  width: 100%;
  margin-top: 5px;
}
//Change font size when screen size changes
/* Extra small devices (phones, less than 768px) */
@media (max-width: 768px) {
  .beer-name, .beer-rating {
    font-size: 15px;
  }
  .beer-type, .number-ratings, .locations {
    font-size: 12px;
  }
  .page-header {
    margin-top: 10px;
  }
  .dark-gray-text {
    margin-top: 0;
  }
  .xs-image-holder {
    float: right;
    margin-top: 35px;
    width: 100px;
  }
  .image-holder {
    float: right;
    width: 100px;
  }
}
@media (min-width: 786px) {
  .image-holder {
    position: fixed;
    top: 120px;
    right: 10px;
    width: 100px;
  }
}
/* Medium devices (desktops, 992px and up) */
@media (max-width: 992px) {
  .beer-name, .beer-rating {
    font-size: 15px;
  }
  .beer-type, .number-ratings, .locations {
    font-size: 12px;
  }
}
@media (min-width: 880px) {
  .image-holder {
    position: fixed;
    top: 120px;
    right: 10px;
    width: 125px;
  }
}
@media (min-width: 1000px) {
  .image-holder {
    position: fixed;
    top: 120px;
    right: 10px;
    width: 115px;
  }
}
@media (min-width: 1200px) {
  .image-holder {
    position: fixed;
    top: 115px;
    right: 20px;
    width: 165px;
  }
}
@media (min-width: 1300px) {
  .image-holder {
    position: fixed;
    top: 115px;
    right: 35px;
    width: 175px;
  }
}


/* Patch for for bootstrap-modal. Include BEFORE bootstrap-modal.css!*/

body.modal-open, 
.modal-open .navbar-fixed-top, 
.modal-open .navbar-fixed-bottom {
  margin-right: 0;
}

.modal {
  left: 50%;
  bottom: auto;
  right: auto;
  z-index: 1050;
  padding: 0;
  width: 500px;
  margin-left: -250px;
  background-color: #ffffff;
  border: 1px solid #999999;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 6px;
  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
  background-clip: padding-box;
}

.modal.container {
  max-width: none;
}

.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1040;
}

/*!
 * Bootstrap Modal
 *
 * Copyright Jordan Schroter
 * Licensed under the Apache License v2.0
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 */

.modal-open {
  overflow: hidden;
}


/* add a scroll bar to stop page from jerking around */
.modal-open.page-overflow .page-container,
.modal-open.page-overflow .page-container .navbar-fixed-top,
.modal-open.page-overflow .page-container .navbar-fixed-bottom,
.modal-open.page-overflow .modal-scrollable {
  overflow-y: scroll;
}

@media (max-width: 979px) {
  .modal-open.page-overflow .page-container .navbar-fixed-top,
  .modal-open.page-overflow .page-container .navbar-fixed-bottom  {
    overflow-y: visible;
  }
}


.modal-scrollable {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: auto;
}

.modal {
  outline: none;
  position: absolute;
  margin-top: 0;
  top: 50%;
  overflow: visible; /* allow content to popup out (i.e tooltips) */
}

.modal.fade {
  top: -100%;
  -webkit-transition: opacity 0.3s linear, top 0.3s ease-out, bottom 0.3s ease-out, margin-top 0.3s ease-out; 
     -moz-transition: opacity 0.3s linear, top 0.3s ease-out, bottom 0.3s ease-out, margin-top 0.3s ease-out;
       -o-transition: opacity 0.3s linear, top 0.3s ease-out, bottom 0.3s ease-out, margin-top 0.3s ease-out;
          transition: opacity 0.3s linear, top 0.3s ease-out, bottom 0.3s ease-out, margin-top 0.3s ease-out;
}

.modal.fade.in {
  top: 50%;
}

.modal-body {
  max-height: none;
  overflow: visible;
}

.modal.modal-absolute {
  position: absolute;
  z-index: 950;
}

.modal .loading-mask {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: #fff;
  border-radius: 6px;
}

.modal-backdrop.modal-absolute{
  position: absolute;
  z-index: 940;
}

.modal-backdrop, 
.modal-backdrop.fade.in{
  opacity: 0.7;
  filter: alpha(opacity=70);
  background: #fff;
}

.modal.container {
  width: 940px;
  margin-left: -470px;
}

/* Modal Overflow */

.modal-overflow.modal {
  top: 1%;
}

.modal-overflow.modal.fade {
  top: -100%;
}

.modal-overflow.modal.fade.in {
  top: 1%;
}

.modal-overflow .modal-body {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

/* Responsive */

@media (min-width: 1200px) {
  .modal.container {
    width: 1170px;
    margin-left: -585px;
  }
}
/* ... */

